--- a/文摘语录/关于奋斗.md
+++ b/文摘语录/关于奋斗.md
@@ -1,4 +1,4 @@
-### 关于奋斗
+### 图书馆名言
 
 - 此刻打盹，你将做梦；而此刻学习，你将圆梦。（This moment will nap, you will have a dream; But this moment study,you will interpret a dream. ）
 - 我荒废的今日，正是昨日殒身之人祈求的明日。（I leave uncultivated today, was precisely yesterday perishes tomorrow which person of the body implored.）
@@ -13,6 +13,7 @@
 - 谁也不能随随便便成功，它来自彻底的自我管理和毅力。（Nobody can casually succeed, it comes from the thoroughself-control and the will. ）
 - 今天不走，明天要跑。（Today does not walk, will have to run tomorrow.）¬ 16、投资未来的人是，忠于现实的人。（The investment future person will be, will be loyal to the realityperson. ）
 
+### 关于奋斗
 1.	失败从放纵开始！
 2.	求学求道求真理，为已为家为祖国！
 3.	有志者，事竟成，破釜沉舟，百二秦关终属楚；
