--- a/文摘语录/网络语摘.md
+++ b/文摘语录/网络语摘.md
@@ -1,3 +1,42 @@
+### 春晚经典
+
+1.	天涯何处无芳草，何必就在身边找，数量本来就不多，何况质量还不好。
+2.	那人长得吧，怎么说呢。像素比较低！
+3.	船停泊在港湾里非常安全，但那不是造船的目的。
+4.	眼泪的存在，是为了证明悲伤不是一场幻觉。
+5.	思念不能自己，痛苦不能自理，结果不能自取，幸福不能自予。
+6.	寂寞就是有人说话时，没人在听；有人在听时，你却没话说了。
+7.	鹅鹅鹅，曲项用刀割，拔毛加瓢水，点火盖上锅。
+8.	我们每个人都是梦想家，当梦走了，就只剩想家了
+9.	“你喜欢我天使的面孔还是魔鬼的身材？”“我就喜欢你这种幽默感。”
+10.	你有权保持沉默，但你所说的每一句话都将成为遗言。
+11.	我颠覆整个世界，只为摆正你的倒影。
+12.	我有一筐的愿望，却等不到一颗流星。
+13.	买了一只精致的小表，可时间还是那么无聊。
+14.	不要和我比懒，我懒的和你比。
+15.	生，容易；活，容易。生活，不容易。
+16.	鄙视我的人那么多，你算老几?
+17.	有的人活着，他早该死了。
+18.	总有一天你的名字会出现在我家户口本上。
+19.	东方女性的传统优点您都具备了：一美丽，二善良，三贤惠，四勤劳，五温柔，六纯洁，七朴实，八端正，所以人们叫你八婆。
+20.	比一比这两条鱼谁长的帅，长得帅就是明天的菜。
+21.	当有人装酷时，哥都会低下头，不是哥修养好，哥是在找砖头。
+22.	光阴似面，日月如锅。
+23.	你这种说话方式，在修辞学里叫作“扯”。
+24.	到此一游，解闷消愁
+25.	别好贱好贱的，多暴露我的性格啊？
+26.	我爸都登上服不服排行榜了。
+27.	其实幸福很简单，不要总想着自己没啥，要想着自己有啥。
+28.	硅和水在一起会生成什么？王八汤。
+29.	周杰棍的双杰伦
+30.	拿扫帚的不一定是清洁工，也有可能是哈利波特
+31.	冰箱里还剩半根黄瓜，给孩子炒四个菜
+32.	你的脑子进了地沟油了吧.
+33.	我老婆就是对面加油站的，方圆一公里都是雷区啊。
+34.	太监可以没儿子，你不能没爹。
+35.	追好姑娘不能规律的走楼梯，要爬窗户。
+36.	你有病啊？答：你有药啊？
+
 ### 网络语摘
 
 1.	白天停水，晚上停电，发不出工资，买不起面，打开邓选找到答案，原来是社会主义初级阶段，翻到最后，我靠，一百年不变!
@@ -125,3 +164,42 @@
 指南针：思想稳定，东西再好也不被诱惑。  
 花瓶：外表再漂亮，也掩不住内心的空虚。  
 树叶：得势时趾高气扬，失意时威风扫地。  
+
+### 毛主席语录
+
+- 一条亘古不变的真理：枪杆子里面出政权！
+- 最鼓舞人心的一句话：星星之火，可以燎原。 
+- 最豪迈，最傲气的一句话：一切反动派都是纸老虎！ 
+- 最震撼人心，最震撼世界的一句话：中国人民从此站起来了！ 
+- 最正气凛然的一句话：人不犯我，我不犯人。 
+- 最无奈又最具神秘性的一句话：天要下雨，娘要嫁人，由他去吧！ 
+- 最伤感的一句诗：汽笛一声肠已断，从此天涯孤旅！ 
+- 最悲壮的一句诗：苍山如海，残阳如血！ 
+- 最惬意的一句诗：江山如此多娇！ 
+- 最酷的一句诗：独立寒秋，湘江北去，橘子洲头。 
+- 最有凝聚力的一句话：军民团结如一人，试看天下谁能敌！ 
+- 最具警告的一句话：人不犯我，我不犯人；人若犯我，我必犯人！ 
+- 最清醒的一句话：在战略上要藐视敌人，在战术上要重视敌人！ 
+- 最有哲理的一句话：敌人反对的我们就要拥护，敌人拥护的我们就要反对！ 
+- 最好斗的一句话：与天奋斗，其乐无穷！与地奋斗，其乐无穷！与人奋斗，其乐无穷! 
+- 最具说服力的自我辩护：赫鲁晓夫从不搞个人崇拜，他的倒台是没有人崇拜他！ 
+- 最具奥运精神的一句口号：文明其精神，野蛮其体魄！ 
+- 最像长辈的一句话：好好学习，天天向上。 
+- 最大的发誓：我们一定要解放台湾！ 
+- 最有煽动性的一句话：哪里有压迫，哪里就有反抗！ 
+- 对战争最准确的定义：一种最高的斗争形式。政治是不流血的战争，战争是流血的政治！ 
+- 最有发言权的话：没有调查就没有发言权！ 
+- 最讲“条件”的一句话：鸡蛋因适当的温度而变化为鸡，但温度不能使石头变为鸡。 
+- 最有主人翁意识的一句诗：问苍茫大地，谁主沉浮？ 
+- 最激昂的一句诗：指点江山，激扬文字，粪土当年万户侯！ 
+- 对最美的景物描写：须晴日，看红装素裹，分外妖娆。 
+- 最狂放的景况描写：横空出世，莽昆仑，阅尽人间春色。 
+- 最畅快的一句诗：雄关漫道真如铁，而今迈步从头越！ 
+- 最具广告效应的一句诗：不到长城非好汉！ 
+- 最有“把握”的一句诗：数风流人物，还看今朝！ 
+- 最潇洒的一句诗：不管风吹浪打，胜似闲庭信步！ 
+- 最入镜的一句诗：暮色苍茫看劲松，乱云飞渡仍从容。 
+- 最有时间观念的一句诗：一万年太久，只争朝夕！ 
+- 最冷静的一句话:宜将剩勇追穷寇，不可沽名学霸王。 
+- 最具历史性的一句话：天若有情天亦老，人间正道是沧桑。
+
