--- a/兴趣作品/毕业晚宴.md
+++ b/兴趣作品/毕业晚宴.md
@@ -19,12 +19,10 @@ ________________________________________
 3. 赵刚出场。
 4. 李华出场。
 5. 孙芳、钱峰一起出场。
-
-#### 第一节
-> 相继临场
 ________________________________________
 
-（二胡声起）
+#### 第一节 相继临场
+（二胡声起）  
 **王强：**（坐在位置上啜泣）……今天早上，大学从我身上爬了起来，穿上裤子对我说：“留下青春，你走吧！”……感觉不是我上了大学，而是大学上了我！……时间就像这餐巾纸一样，用着用着就没了……  
 （张晶上场，换音乐）  
 **张晶：**时间确实是很宝贵啊，我可是深有体会，记得上次拉肚子，就差1秒，厕所就被人占了……唉，我说强哥，男儿有泪不轻谈，你怎么哭了？  
@@ -33,7 +31,7 @@ ________________________________________
 **王强：**张晶啊，你不懂我的伤悲，就像白天不懂夜的黑。  
 **张晶：**切，不就是考研和考公务员都失败了嘛，这有什么，留着青山在，不怕没山烧！  
 **王强：**唉——！一帆风顺何偿有，不如意事常八九。  
-（赵刚出场）
+（赵刚出场）  
 **赵刚：**听天空一声巨响，看到我闪亮登场，喜欢我的请尖叫，爱上我的请鼓掌！……唉呀，强哥和张晶都已经来啦，（打招呼）嗨，晶晶，一看你我就心花怒放呀；强哥，看你两眼无光，印堂发灰的，有什么不开心的事儿，说出来让大家开心开心吧。  
 **张晶：**强哥，甭理他，他就是这副德性，真是烂泥扶不上墙哟。  
 **王强：**呵呵，人生无非就是让人笑笑，偶尔也笑笑别人嘛。  
@@ -68,12 +66,10 @@ ________________________________________
 （赵刚给大家倒酒）  
 **赵刚：**好诗，来来来，今天大家不醉不休。（众人起身）  
 **众人：**干！  
-
-#### 第二节
-> 叙谈流年
 ________________________________________
 
-（众人坐定）  
+#### 第二节 叙谈流年
+（众人坐定）   
 **赵刚：**峰哥，我敬你一杯。你泡妞那么厉害，得教教我如何追求张晶呀。  
 **张晶：**峰哥，他这人不可理喻。（对赵刚）赵刚，追女孩子是资本的，我喜欢又高又帅又有才，有车有房有事业的男人，你有那条件吗？一般般的我，一般般的亮；一般般的你，我看不上。  
 **赵刚：**张晶，你的愿望可以在晚上的时候实现，因为：做梦，一切皆有可能！  
@@ -108,24 +104,23 @@ ________________________________________
 **张晶：**我想此时此刻，每个像我们这样将要离开的人都会骨梗在喉的，不如借此机会我们一起向大家讲讲自己的那些深藏已久的心里话吧！  
 **众人：**嗯！  
 （三人收起对联，众人离席到发表感言的位置）  
-
-#### 第三节
-> 离别感言
 ________________________________________
 
-**王强：**同学们，先生不讲古，后生会失谱，老牛肉有嚼头，老经验有听头呀！ 
-**张晶：**学弟学妹们，大聪明是战略，小聪明是战术，今天就让你们见识见识学长学姐们的宏观角度和微视野。 
-**赵刚：**船停泊在港湾里非常安全，但那不是造船的目的，历史的标点是句号，天下没有不散的宴席，走进校门就注定是要走出校门的。 
-**李华：**让过去过去，让未来到来。读完大学就是大人了，告别了羞涩单纯，走向了成熟稳重！ 
-**钱峰：**轻轻的我走了，正如我轻轻的来；我挥一挥衣袖，不带走一个女孩。 
-**孙芳：**走出的是用钱混日子的学校，走进的是用日子混钱的社会。 
-**王强：**同学们，一个不学无术的人，可能在部分时间内忽悠所有人，也可能在所有时间内忽悠部分人，但绝不可能在所有时间内忽悠所有人。 
-**张晶：**同学们，不管什么享受都有终止的时候，只有学习带来的思想是永恒的！学习的痛苦是暂时的，而未学到的痛苦是终生的！不要过分的同情正在接受磨练的自己，请享受这种无法回避的痛苦吧。 
-**赵刚：**走一起是缘分，一起走是幸福。张晶，就算我不能给你全世界，但我会把我的世界全给你，早晚有一天，你的名字会出现在我家户口本上的！ 
-**李华：**人生最重要的其实不是努力，也不是奋斗，而是选择！你可以选择放弃，但你却无法放弃选择！今天好多人眼里流的泪水，大多是昨天他们脑子里进的水！所以选择决定你的感受，选择决定你的未来。 
-**孙芳：**一日又一日，日起日落；一年又一年，风风雨雨；细雨绵绵，点点滴滴，激起思念的涟漪；绵绵细雨，丝丝缕缕，牵出记忆的花絮。 
-**钱峰：**明天，我们就要驾鹤而去了！告别了，亲爱的同学们；告别了，敬爱的老师们；告别了，美丽的母校——上饶师范学院！ 
-**王强：** 
+#### 第三节 离别感言
+
+**王强：**同学们，先生不讲古，后生会失谱，老牛肉有嚼头，老经验有听头呀！  
+**张晶：**学弟学妹们，大聪明是战略，小聪明是战术，今天就让你们见识见识学长学姐们的宏观角度和微视野。  
+**赵刚：**船停泊在港湾里非常安全，但那不是造船的目的，历史的标点是句号，天下没有不散的宴席，走进校门就注定是要走出校门的。  
+**李华：**让过去过去，让未来到来。读完大学就是大人了，告别了羞涩单纯，走向了成熟稳重！  
+**钱峰：**轻轻的我走了，正如我轻轻的来；我挥一挥衣袖，不带走一个女孩。  
+**孙芳：**走出的是用钱混日子的学校，走进的是用日子混钱的社会。  
+**王强：**同学们，一个不学无术的人，可能在部分时间内忽悠所有人，也可能在所有时间内忽悠部分人，但绝不可能在所有时间内忽悠所有人。  
+**张晶：**同学们，不管什么享受都有终止的时候，只有学习带来的思想是永恒的！学习的痛苦是暂时的，而未学到的痛苦是终生的！不要过分的同情正在接受磨练的自己，请享受这种无法回避的痛苦吧。  
+**赵刚：**走一起是缘分，一起走是幸福。张晶，就算我不能给你全世界，但我会把我的世界全给你，早晚有一天，你的名字会出现在我家户口本上的！  
+**李华：**人生最重要的其实不是努力，也不是奋斗，而是选择！你可以选择放弃，但你却无法放弃选择！今天好多人眼里流的泪水，大多是昨天他们脑子里进的水！所以选择决定你的感受，选择决定你的未来。  
+**孙芳：**一日又一日，日起日落；一年又一年，风风雨雨；细雨绵绵，点点滴滴，激起思念的涟漪；绵绵细雨，丝丝缕缕，牵出记忆的花絮。  
+**钱峰：**明天，我们就要驾鹤而去了！告别了，亲爱的同学们；告别了，敬爱的老师们；告别了，美丽的母校——上饶师范学院！  
+**王强：**  
 匆匆太匆匆，  
 夕阳几度红？  
 心有千千结，  
