--- a/兴趣作品/毕业晚宴.md
+++ b/兴趣作品/毕业晚宴.md
@@ -131,10 +131,9 @@ ________________________________________
 唱首老歌吧，在空气中  
 写些文字吧，在岁月里  
 ……
- 
-#### 第四节
-> 谢 幕
 ________________________________________
+ 
+#### 第四节 谢 幕
 **王强：**祝老师们健健康康！  
 **张晶：**祝同学们快快乐乐！  
 **赵刚：**祝生活平平安安！  
