--- a/兴趣作品/西厢记.md
+++ b/兴趣作品/西厢记.md
@@ -11,7 +11,8 @@
 - 第五幕   皆大欢喜
 
 #### 第一幕 牧童救蛇
-> 【人物：张生、莺莺、崔母、珍珍    场景：普救寺】
+> 【人物：张生、莺莺、崔母、珍珍    场景：普救寺】  
+
 **旁白：**话说唐贞元年，前朝宰相崔珏病逝，崔夫人带女儿莺莺护送相国灵柩回老家安葬。中途在河中府普救寺暂住。这崔莺莺年方十八岁，针织女红，诗词书画，无所不能。她父亲在世时，已将她许配给郑尚书之子。此时，洛阳青年张生赴长安赶考，路过河中府，顺道游览普救寺时与莺莺邂逅。于是……  
 **崔母：**丈夫本是一品相，无奈官大命不长。留下莺莺和老娘，孤儿寡母怎么办？怎么办？  
 **莺莺：**小女名叫崔莺莺，年方十八、貌美如花，性格乖巧，爱逛淘宝。妈妈，您不要担心，莺莺以后照顾您。  
@@ -58,7 +59,8 @@
 **张生：**真哒——！你这句话能救人，你知道吗，太感谢你啦！ 过错，是一时的遗憾；错过，则是一生的遗憾，如不能再见莺莺面，考取功名又如何，徘徊犹豫，失去机遇，犹豫徘徊，失不再来，我要求长老，让我在东厢房住下来。  
 
 #### 第二幕 后院幽会
-> 【人物：张生、莺莺  场景：后院】
+> 【人物：张生、莺莺  场景：后院】  
+
 **旁白：**荷尔蒙神奇的力量，总是把青春变得像脱缰的野狗一样！这莺莺走后，张生便一直魂不守舍，莺莺更是心神不宁，这天夜里，张生来到了西厢后院。  
 **张生：**天上飘着些微云，地上吹着些微风，啊——，微风吹动了我的头发，教我如何不想她！看！那灯亮着的是哪里？那就是东方，崔莺莺就是太阳！  
 **莺莺：**他，气宇轩昂，风流倜傥；他，才情满腔，幽默勇敢……我这是怎么了？往日的矜持理性都到哪去了？我的内心怎么会变得如此激烈和迫切。  
@@ -88,7 +90,8 @@
 **莺莺：**呀嘛蝶~~  
 
 #### 第三幕 喜结良缘
-> 【人物：张生、莺莺、崔母、珍珍、孙飞虎、杜确、随从  场景：普救寺】
+> 【人物：张生、莺莺、崔母、珍珍、孙飞虎、杜确、随从  场景：普救寺】  
+
 **旁白：**有风就有浪，有羊就有狼。这河中府远近知名的强盗孙飞虎听说绝世美女崔莺莺在普救寺借住，便闻风而来了……  
 （孙飞虎及随从上）  
 **飞虎：**大爷我就是孙飞虎，这方圆百里哪个不知道我的名声？听说这普救寺里来了个叫崔莺莺的小美妞，我怎么可能错过这个可爱的小美妞呢？（到大门外）快把崔莺莺给我交出来，如若不交，我就把这破寺一把火给烧啦！  
@@ -138,7 +141,8 @@
 **莺莺：**张公子，我永远等你！  
 
 #### 第四幕 长亭送别
-> 【人物：张生、莺莺、珍珍  场景：长亭】
+> 【人物：张生、莺莺、珍珍  场景：长亭】  
+
 **旁白：**林花谢了春红，太匆匆，无奈朝来寒雨晚来风；胭脂泪，留人醉，几时重？自是人生长恨水长东。  
 （莺莺、珍珍上）  
 **莺莺：**今天送张生去考试，本来就是离人伤感，又是这暮秋早上，唉！  
@@ -161,7 +165,8 @@
 **珍珍：**小姐，回去吧。  
 
 #### 第五幕 皆大欢喜
-> 【人物：所有人   场景：崔家】
+> 【人物：所有人   场景：崔家】  
+
 **旁白：**真是，人情似纸张张薄，世事如棋局局新。话说，这张生走后，莺莺是相思成疾啊，就在这时，和莺莺有过婚约的郑恒出现了……  
 （郑恒上）  
 **郑恒：**我是郑尚书长子郑恒，打早就和莺莺订了婚，可恨张生坏好事，勾走了莺莺的灵魂！只怨我个太高、人太帅，我爸又不是双江，那莺莺一时羞怯被张生横插一脚，这煮熟的鸭子，跑了！对别人客气，就是对自己不客气。我已经放出话去“张生高中后被卫尚书招做女婿，在京中享受荣华富贵了”并且差人四处散布。哼哼，这回我一定要拿回本该属于我的东西！  
@@ -209,6 +214,7 @@ The end
 #### 角色要求
 莺莺、张生、崔母、珍珍、孙飞虎及随从、杜确及随从、郑恒、张生2及随从  
 
+#### 配音要求
 莺莺（女声）  
 张生（男声）  
 崔母（女声）  
