--- a/兴趣作品/杜十娘.md
+++ b/兴趣作品/杜十娘.md
@@ -45,18 +45,18 @@
 #### 第二幕   十娘从良 
 > 【场景：聚香阁  人物：鸨母、十娘、李甲、沉鱼、落雁】  
 
-**旁白：**话说李甲风流潇洒，才华横溢，对十娘更是百般呵护，慷慨解馕。两人如干柴烈火, 一见倾情，如胶似漆，形影难离~~~~  
+**旁白：**话说李甲风流潇洒，才华横溢，对十娘更是百般呵护，慷慨解馕。两人如干柴烈火, 一见倾情，如胶似漆，形影难离 
 (外音)  
 **十娘：**你说，我是你的什么？  
 **李甲：**你，是我的大碗龙虾！  
 **十娘：**啊！原来我是丹阳人家的一道菜啊！  
-**李甲：**这样，我每天我都能想到你、看到你、闻到你、吃到你 ~~   
+**李甲：**这样，我每天我都能想到你、看到你、闻到你、吃到你
 **旁白：**可是，采云易散，好梦难长，李甲家里知道此事后，电话手机摧李回家且冻结了他的生活费用。  
 （开幕）  
 **李甲：**不求门当户对，只求感觉到位。十娘啊，我多么希望我永远都能这样跟你在一起，今生今世，永不分离！  
 **十娘：**相公，我愿意死在你的怀里，埋在你的眼里，葬在你的心里。  
 **李甲：**十娘，我要娶你回家，你跟我回去吧，女人与牙刷，我不想与人共用。  
-**十娘：**你有情，我有意，我们情投意合，两相情悦，我愿意 ~~  
+**十娘：**你有情，我有意，我们情投意合，两相情悦，我愿意
 **李甲：**可是我现在袋中无钱了，你知道吗，最近我吃饭不加菜，省钱谈恋爱。真是有钱男子汉，没钱汉子难呐！  
 **十娘：**我这里有十万块钱，借你先扛一阵子吧！  
 （鸨母上）  
