--- a/兴趣作品/毕业晚宴.md
+++ b/兴趣作品/毕业晚宴.md
@@ -3,9 +3,9 @@
 ________________________________________
 
 #### 故事简介
-一群大学毕业生共进离别晚宴，相继到场。掏心吐肺，共叙往事；浓情厚意，畅谈未来。最后，他们轮序发表了离别感言，幽默中富含哲理，诗语中饱含深情。  
-青春、理想、爱情、友谊、现实……  
-浪漫、真诚、搞笑、感伤、无奈……  
+> 一群大学毕业生共进离别晚宴，相继到场。掏心吐肺，共叙往事；浓情厚意，畅谈未来。最后，他们轮序发表了离别感言，幽默中富含哲理，诗语中饱含深情。  
+> 青春、理想、爱情、友谊、现实……  
+> 浪漫、真诚、搞笑、感伤、无奈……  
 
 #### 场景和道具
 一张圆桌、六条椅子、餐具果品、饮料纸巾、对联（加横幅）等
