--- a/兴趣作品/白蛇传.md
+++ b/兴趣作品/白蛇传.md
@@ -1,7 +1,7 @@
 ### 白 蛇 传
 
 #### 故事简介
-前世一个善良的小牧童偶然间救下一条被困石间的小白蛇。今生当年的小牧童已然成为英俊秀美、勤奋有为的一代名医许仙。前世幸运的小白蛇感恩感德许下有朝必报的誓言，经过一千七百年的修练化为绝世美人白素贞。白素珍与青蛇精小青一起在西湖相遇了前世恩人许仙，白以身相许偿还千年之前的救命恩情。得道高僧法海不解风情、刚愎自用，极力拆散白许的人妖之恋，趁白素珍刚生育不久身体虚弱之时，用金钵将白困于雷峰塔下。许仙无耐，出家为僧。光阴荏苒，十八年后，许仙之子许世林已经长大成人。在世林的努力下，终于感动上天，白素珍得以脱身。从此许家三口得以团聚，法海也功德圆满，得归天界。
+> 前世一个善良的小牧童偶然间救下一条被困石间的小白蛇。今生当年的小牧童已然成为英俊秀美、勤奋有为的一代名医许仙。前世幸运的小白蛇感恩感德许下有朝必报的誓言，经过一千七百年的修练化为绝世美人白素贞。白素珍与青蛇精小青一起在西湖相遇了前世恩人许仙，白以身相许偿还千年之前的救命恩情。得道高僧法海不解风情、刚愎自用，极力拆散白许的人妖之恋，趁白素珍刚生育不久身体虚弱之时，用金钵将白困于雷峰塔下。许仙无耐，出家为僧。光阴荏苒，十八年后，许仙之子许世林已经长大成人。在世林的努力下，终于感动上天，白素珍得以脱身。从此许家三口得以团聚，法海也功德圆满，得归天界。
 
 #### 目  录
 - 第一幕   牧童救蛇
