--- a/兴趣作品/西厢记.md
+++ b/兴趣作品/西厢记.md
@@ -1,7 +1,7 @@
 ### 西厢记
 
 #### 故事简介
-唐贞元年，前朝宰相崔珏病逝，其女崔莺莺随母一道送亡父回乡，路宿普救寺时与进京赶考的书生张珙邂逅，两人一见钟情。地霸孙飞虎前来抢莺莺，崔母无耐只好说出谁救其女，其女嫁谁的条件。征西将军杜确恰是张生基友，后经张生出面叫来杜确打退孙飞虎，崔母女最终化险为夷，而崔母确因杜贫而食言，并表示张生高中后方能娶莺莺。次日，莺莺在寺外长亭送别张生，而后她便陷入相思之中，一个与莺莺有婚约的表哥又来纠缠。最后是，张生高中，回来迎娶了莺莺，一切皆大欢喜！
+> 唐贞元年，前朝宰相崔珏病逝，其女崔莺莺随母一道送亡父回乡，路宿普救寺时与进京赶考的书生张珙邂逅，两人一见钟情。地霸孙飞虎前来抢莺莺，崔母无耐只好说出谁救其女，其女嫁谁的条件。征西将军杜确恰是张生基友，后经张生出面叫来杜确打退孙飞虎，崔母女最终化险为夷，而崔母确因杜贫而食言，并表示张生高中后方能娶莺莺。次日，莺莺在寺外长亭送别张生，而后她便陷入相思之中，一个与莺莺有婚约的表哥又来纠缠。最后是，张生高中，回来迎娶了莺莺，一切皆大欢喜！
 
 #### 目  录
 - 第一幕   神寺初遇
