--- a/兴趣作品/杜十娘.md
+++ b/兴趣作品/杜十娘.md
@@ -1,7 +1,7 @@
 ### 杜十娘怒沉百宝箱
 
 #### 故事简介
-天朝年间有一个聚香阁娱乐会所，花魁杜十娘长得花容月貌、国色天香。富家公子李甲慕名寻来，痴迷于杜。后因李挥洒无度、花完钱物会所鸨母开始嫌弃他，因一次偶然机会李甲借鸨母的一次过失得到了十娘。但是后来却因奸友孙富的怂恿，碍于无钱无面见父母，将杜十娘给卖了。最后杜十娘失忘之致，亮出百宝箱，怒斥孙、李，投江而死！
+> 天朝年间有一个聚香阁娱乐会所，花魁杜十娘长得花容月貌、国色天香。富家公子李甲慕名寻来，痴迷于杜。后因李挥洒无度、花完钱物会所鸨母开始嫌弃他，因一次偶然机会李甲借鸨母的一次过失得到了十娘。但是后来却因奸友孙富的怂恿，碍于无钱无面见父母，将杜十娘给卖了。最后杜十娘失忘之致，亮出百宝箱，怒斥孙、李，投江而死！
 
 #### 目  录
 - 第一幕     青楼初会
