--- a/兴趣作品/西厢记.md
+++ b/兴趣作品/西厢记.md
@@ -10,7 +10,7 @@
 - 第四幕   长亭送别
 - 第五幕   皆大欢喜
 
-#### 第一幕 牧童救蛇
+#### 第一幕 神寺初遇
 > 【人物：张生、莺莺、崔母、珍珍    场景：普救寺】  
 
 **旁白：**话说唐贞元年，前朝宰相崔珏病逝，崔夫人带女儿莺莺护送相国灵柩回老家安葬。中途在河中府普救寺暂住。这崔莺莺年方十八岁，针织女红，诗词书画，无所不能。她父亲在世时，已将她许配给郑尚书之子。此时，洛阳青年张生赴长安赶考，路过河中府，顺道游览普救寺时与莺莺邂逅。于是……  
