--- a/兴趣作品/杜十娘.md
+++ b/兴趣作品/杜十娘.md
@@ -90,7 +90,7 @@
 **李甲：**咱们做动车吧，实惠划算！  
 **十娘：**没事，钱什么的不是问题，动车一等舱。  
 
-#### 第三幕   车上情变。
+#### 第三幕   变情列车。
 > 【场景：火车上  人物：十娘、孙富、李甲】  
 
 **旁白：**过了十五，月亮就要变弯；过了中午，太阳就会落山。风无常顺，乐极生悲。所有事情的发展都不是那么顺利的，一般来说，一个悲剧的故事到这个时候也该开始了。正当杜十娘和李甲坐在一等座车厢——  
