--- a/兴趣作品/毕业晚宴.md
+++ b/兴趣作品/毕业晚宴.md
@@ -119,7 +119,7 @@ ________________________________________
 **赵刚：**走一起是缘分，一起走是幸福。张晶，就算我不能给你全世界，但我会把我的世界全给你，早晚有一天，你的名字会出现在我家户口本上的！  
 **李华：**人生最重要的其实不是努力，也不是奋斗，而是选择！你可以选择放弃，但你却无法放弃选择！今天好多人眼里流的泪水，大多是昨天他们脑子里进的水！所以选择决定你的感受，选择决定你的未来。  
 **孙芳：**一日又一日，日起日落；一年又一年，风风雨雨；细雨绵绵，点点滴滴，激起思念的涟漪；绵绵细雨，丝丝缕缕，牵出记忆的花絮。  
-**钱峰：**明天，我们就要驾鹤而去了！告别了，亲爱的同学们；告别了，敬爱的老师们；告别了，美丽的母校——上饶师范学院！  
+**钱峰：**明天，我们就要驾鹤而去了！告别了，亲爱的同学们；告别了，敬爱的老师们；告别了，美丽的母校——XXX大学！  
 **王强：**  
 匆匆太匆匆，  
 夕阳几度红？  
